--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
   <div class="section-title" data-aos="fade-up" data-aos-delay="100">
     <h2>Services</h2>
-    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
+    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
   </div>
   
   <section class="header">
