--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
               </div>
             </div>
             <div class="form-group mt-3">
-              <button type="submit" class="btn_3">Send Message <i
-                  class="flaticon-right-arrow"></i> </button>
+              <input type="submit" name = "submit" class="btn btn-danger">Send Message <i
+                  class="flaticon-right-arrow"></i> </input>
             </div>
           </form>
         </div>
