--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
               </div>
             </div>
             <div class="form-group mt-3">
-              <input type="submit" name = "submit" class="btn btn-danger">Send Message <i
-                  class="flaticon-right-arrow"></i> </input>
+              <input type="submit" name = "submit" class="btn btn-danger" value = "submit">
+            
             </div>
           </form>
         </div>
