--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
               </div>
             </div>
             <div class="form-group mt-3">
-              <input type="submit" name = "submit" class="btn btn-danger" value = "submit"/>
+              <input type="submit" id="submit" value="SEND" />
             
             </div>
           </form>
